--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "vue-cool-lightbox": "2.7.4",
     "vue-disqus": "4.0.1",
     "@fortawesome/fontawesome-svg-core": "1.2.19",
-    "@fortawesome/free-solid-svg-icons": "5.9.0",
-    "@fortawesome/free-regular-svg-icons": "5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/vue-fontawesome": "0.1.6"
   },
   "devDependencies": {
