--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "vue-carousel": "^0.18.0",
     "vue-cool-lightbox": "2.7.4",
     "vue-disqus": "4.0.1",
-    "@fortawesome/fontawesome-svg-core": "1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/free-regular-svg-icons": "^5.9.0",
-    "@fortawesome/vue-fontawesome": "0.1.6"
+    "@fortawesome/fontawesome-svg-core": "1.2.35",
+    "@fortawesome/free-solid-svg-icons": "5.15.3",
+    "@fortawesome/free-regular-svg-icons": "5.15.3",
+    "@fortawesome/free-brands-svg-icons": "5.15.3",
+    "@fortawesome/vue-fontawesome": "0.1.6",
+    "dayjs": "1.10.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
