--- a/package.json
+++ b/package.json
@@ -14,27 +14,28 @@
     "clean": "vue-cli-service clean"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.35",
+    "@fortawesome/free-brands-svg-icons": "5.15.3",
+    "@fortawesome/free-regular-svg-icons": "5.15.3",
+    "@fortawesome/free-solid-svg-icons": "5.15.3",
+    "@fortawesome/vue-fontawesome": "0.1.6",
+    "@popperjs/core": "^2.9.2",
     "axios": "0.21.1",
     "bootstrap": "^4.5.2",
+    "core-js": "^3.6.5",
+    "dayjs": "1.10.6",
     "jquery": "^3.5.1",
-    "@popperjs/core": "^2.9.2",
-    "popper.js": "^1.16.1",
     "node-sass": "4.13.1",
+    "popper.js": "^1.16.1",
     "sass-loader": "8.0.2",
+    "v-calendar": "2.4.1",
+    "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-cool-lightbox": "2.7.4",
     "vue-disqus": "4.0.1",
-    "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/free-solid-svg-icons": "5.15.3",
-    "@fortawesome/free-regular-svg-icons": "5.15.3",
-    "@fortawesome/free-brands-svg-icons": "5.15.3",
-    "@fortawesome/vue-fontawesome": "0.1.6",
-    "dayjs": "1.10.6",
-    "v-calendar": "2.4.1"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
