--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "vue-disqus": "4.0.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "vue-social-sharing": "3.0.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
